--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "tindev-server",
   "version": "0.0.1",
-  "main": "index.js",
+  "main": "server.js",
   "license": "MIT",
   "scripts": {
-    "dev": "nodemon src/index.ts",
-    "build": "sucrase ./src -d ./dist --transforms typescript,imports"
+    "dev": "nodemon src/server.ts",
+    "clean": "rm -rf dist",
+    "build": "yarn clean && sucrase ./src -d ./dist --transforms typescript,imports"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "2.0.0",
