--- a/package.json
+++ b/package.json
@@ -9,12 +9,16 @@
     "build": "yarn clean && sucrase ./src -d ./dist --transforms typescript,imports"
   },
   "dependencies": {
+    "axios": "0.19.0",
     "cors": "2.8.5",
-    "express": "4.17.1"
+    "express": "4.17.1",
+    "mongoose": "5.6.10"
   },
   "devDependencies": {
+    "@types/axios": "0.14.0",
     "@types/cors": "2.8.6",
     "@types/express": "4.17.1",
+    "@types/mongoose": "5.5.13",
     "@typescript-eslint/eslint-plugin": "2.0.0",
     "@typescript-eslint/parser": "2.0.0",
     "eslint": "^6.2.1",
